STYLES: prevented task list status bubble from text wrapping.

--- a/styles/projectView/projectTasks.css
+++ b/styles/projectView/projectTasks.css
@@ -127,6 +127,7 @@
   padding: 0.3em 0.6em;
   font-size: 0.8em;
   color:#333;
+  white-space: nowrap;
   border-radius: 1em;
   border: #333 solid 1px;
 }
